<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/winNum01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/winNum02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/winNum03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/winNum04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/winNum05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\?"
            android:layout_marginLeft="10dp"
            android:textSize="24sp"/>
            <TextView
                android:id="@+id/winNum06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+ "
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/bonusNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\?"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"/>


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_number"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/myNum01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="1"/>
            <TextView
                android:id="@+id/myNum02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginLeft="10dp"
            android:text="7"/>
            <TextView
                android:id="@+id/myNum03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:text="12"/>
            <TextView
                android:id="@+id/myNum04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:text="3"/>

            <TextView
                android:id="@+id/myNum05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:text="9"/>
            <TextView
                android:id="@+id/myNum06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:text="40"/>
        </LinearLayout>
        <Button
            android:id="@+id/buyoneLottoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/buy_one_lotto"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_money"/>
            <TextView
                android:id="@+id/useMoneyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="0원"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/win_money"/>
            <TextView
                android:id="@+id/winMoneyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="0원"/>
        </LinearLayout>


    </LinearLayout>
</layout>
